<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="135dp"
            android:layout_marginBottom="20dp"
            android:text="@string/reset_password"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_reset_password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/edit_text_background"
            android:drawableLeft="@drawable/icon_lock"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/edit_text_background"
            android:drawableLeft="@drawable/icon_lock"
            android:drawablePadding="15dp"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/white"
            app:met_singleLineEllipsis="true" />

        <Button
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_confirm_password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_design"
            android:layout_marginTop="15dp"
            android:text="@string/btn_reset_password"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:textStyle="bold" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>