<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_reset_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="135dp"
            android:layout_marginBottom="20dp"
            android:text="@string/send_reset_code"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            android:textStyle="bold" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_reset_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_reset_code"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="15dp"
            android:hint="@string/reset_code"
            android:inputType="textEmailAddress"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/white"
            app:met_singleLineEllipsis="true" />

        <Button
            android:id="@+id/send_reset_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_reset_code"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_design"
            android:text="@string/btn_send_reset_code"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:textStyle="bold" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>