<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image">


        <TextView
            android:id="@+id/tv_add_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add_items"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_add_items"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="15dp"
            android:hint="@string/item_name"
            android:inputType="text"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_item_name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="15dp"
            android:hint="@string/item_price"
            android:inputType="text"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/white"
            app:met_singleLineEllipsis="true" />

        <Button
            android:id="@+id/generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_item_price"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_design"
            android:layout_marginTop="15dp"
            android:text="@string/btn_generate_qr_code"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/generate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>