<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/gradientColor" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/create_event"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_toolB"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="9dp"
            android:background="@drawable/icon_arrow_back" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:id="@+id/first_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >



            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="7dp"
                android:hint="@string/event_title"
                android:inputType="text"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/gradientColor"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/gray"
                android:textSize="14dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/icon_date"
                android:drawableTint="@color/gray"
                android:layout_below="@id/et_title"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="7dp"
                android:hint="@string/event_date"
                android:inputType="date"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/gradientColor"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/gray"
                android:textSize="14dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_date"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="7dp"
                android:hint="@string/event_time"
                android:inputType="time"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/gradientColor"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/gray"
                android:textSize="14dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_time"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="7dp"
                android:hint="@string/event_description"
                android:inputType="text"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/gradientColor"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/gray"
                android:textSize="14dp"/>

            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_description"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="7dp"
                android:hint="@string/location"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/gradientColor"
                app:met_singleLineEllipsis="true"
                app:met_textColorHint="@color/gray"
                android:textSize="14dp"/>

            <RelativeLayout
                android:id="@+id/last_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_below="@id/et_location"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txt_attach_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="3dp"
                    android:hint="Upload file in pdf"
                    android:inputType="text"
                    app:met_textColorHint="@color/gray"
                    app:met_singleLineEllipsis="true"
                    android:textSize="14dp"/>

                <Button
                    android:id="@+id/btn_attach_file"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:onClick="doLaunchContactPicker"
                    android:text="browse"
                    android:textSize="10dp"
                    android:textColor="@color/gray"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toEndOf="@id/txt_attach_file" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_create1"
                android:layout_width="321dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/last_row"
                android:background="@drawable/button_design"
                android:text="@string/create"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:layout_centerInParent="true"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>